--- a/bezer.html
+++ b/bezer.html
@@ -6,7 +6,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 		<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 		<link rel="icon" href="images/favicon.png" type="image/x-icon">
-		<title>Izdelava Nike majice</title>
+		<title>Nike T-shirt designer</title>
   </head>
   <body>
 		<div class="naslov">
@@ -14,7 +14,7 @@
 				
 			</div>
 			<div class="topRight">
-				<h1>Izdelava Nike majice</h1>
+				<h1>Create your own Nike T-shirt design</h1>
 			</div>
 		</div>
 		<div class="main">
